--- a/Css/style.css
+++ b/Css/style.css
@@ -186,6 +186,7 @@ body {
 
 .works {
     background-color: #e5e5f7;
+    padding-bottom: 30px;
 }
 
 .works_container {
@@ -234,4 +235,203 @@ body {
 .works_arrow {
     width: 90%;
     cursor: pointer;
+}
+
+/*Footer*/
+
+.footer {
+    background-color: #0c0c0ce3;
+}
+
+.footer_title {
+    font-weight: 300;
+    font-size: 2rem;
+    margin-bottom: 30px;
+}
+
+.footer_title, .footer_newsletter {
+    color: #fff;
+}
+
+.footer_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 60px;
+}
+
+.nav--footer {
+    padding-bottom: 20px;
+    display: grid;
+    gap: 1em;
+    grid-auto-flow: row;
+    height: 100%;
+}
+
+.nav_link--footer {
+    text-align: center;
+    display: flex;
+    margin: 0;
+    margin-right: 20px;
+    flex-wrap: wrap;
+}
+
+.footer_copy {
+    --padding-container: 30px 0;
+    text-align: center;
+    color: #fff;
+}
+
+.footer_icons {
+    display: inline-flex;
+    margin-bottom: 10px;
+}
+
+.footer_img {
+    width: 32px;
+    margin-right: 15px;
+}
+
+.footer_copyright {
+    color: #fff;
+}
+
+
+/*Media Querys*/
+
+@media (max-width:800px){
+    .nav_menu{
+        display: block;
+    }
+
+    .nav_link--menu{
+        position: fixed;
+        background-color: blanchedalmond;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        z-index: 100;
+        opacity: 0;
+        pointer-events: none;
+        transition: .7s opacity;
+    }
+
+    .nav_link--show{
+        --show: block;
+        opacity:1 ;
+        pointer-events: unset;
+    }
+
+    .nav_close{
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        width: 30px;
+        cursor: pointer;
+    }
+
+    .hero_title {
+        font-size: 2.5rem;
+    }
+
+    .about_main{
+        gap: 2em;
+    }
+
+    .about_icons:last-of-type{
+        grid-column: 1/-1;
+    }
+
+    .knowledge_container{
+        grid-template-columns: 1fr;
+        grid-template-rows: max-content 1fr;
+        gap: 3em;
+        text-align: center;
+    }
+
+    .knowledge_picture{
+        grid-row: 1/2;
+        justify-self: center;
+    }
+
+    .works_container {
+        grid-template-columns: 30px 1fr 30px;
+    }
+
+    .works_body {
+        grid-template-columns: 1fr;
+        grid-template-rows: max-content max-content;
+        gap: 3em;
+        justify-items:center ;
+    }
+
+    .works_img {
+        width: 250px;
+        height: 250px;
+    }
+
+    .footer_container {
+        flex-wrap: wrap;
+    }
+
+    .nav--footer {
+        width: 100%;
+        justify-items: center;
+    }
+
+    .nav_link--footer {
+        width: 100%;
+        justify-content: space-evenly;
+        margin: 0;
+    }
+}
+
+@media (max-width:600px){
+    .hero_title{
+        font-size: 2rem;
+    }
+
+    .hero_paragraph{
+        font-size: 1rem;
+    }
+
+    .subtitle{
+        font-size: 1.8rem;
+    }
+
+    .works{
+        --padding-container: 60px 0;
+    }
+
+    .works_container{
+        grid-template-columns: 28px 1fr 28px;
+        gap: .9em;
+    }
+
+    .works_arrow{
+        width: 100%;
+    }
+
+    .works-testimony{
+        margin-top: 15px;
+    }
+
+    .footer_title{
+        justify-self: start;
+        margin-bottom: 15px;
+    }
+
+    .nav--footer{
+        padding-bottom: 60px;
+    }
+
+    .nav_link--footer{
+        justify-content: space-between;
+    }
 }
